add pyvcf and vsearch to env file

--- a/environment-files/genome-sampler-qiime2-tiny-2024.10.yml
+++ b/environment-files/genome-sampler-qiime2-tiny-2024.10.yml
@@ -4,6 +4,8 @@ channels:
 - bioconda
 dependencies:
   - qiime2-tiny
+  - pyvcf
+  - vsearch
   - pip
   - pip:
     - genome-sampler@git+https://github.com/caporaso-lab/genome-sampler.git@master
