--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -1,36 +1,36 @@
-{% set data = load_setup_py_data() %}
-{% set version = data.get('version') or 'placehold' %}
-{% set release = '.'.join(version.split('.')[:2]) %}
-
 package:
   name: genome-sampler
-  version: {{ version }}
-
+  version: {{ PLUGIN_VERSION }}
 source:
-  path: ../..
-
+  path: ..
 build:
   script: make install
-
 requirements:
   host:
     - python {{ python }}
     - setuptools
-
+    - versioningit
+    - wheel
   run:
     - python {{ python }}
     - vsearch
     - pandas
-    - qiime2 {{ release }}.*
-    - q2-types {{ release }}.*
-    - q2templates {{ release }}.*
+    - qiime2 {{ qiime2_epoch }}.*
+    - q2-types {{ qiime2_epoch }}.*
+    - q2templates {{ qiime2_epoch }}.*
     - pyvcf
-
+  build:
+  - setuptools
+  - versioningit
 test:
+  requires:
+    - qiime2 >={{ qiime2 }}
+    - q2-types >={{ q2_types }}
   imports:
     - genome_sampler
     - qiime2.plugins.genome_sampler
-
+  commands:
+    - py.test --pyargs genome_sampler
 about:
   home: https://github.com/caporaso-lab/genome-sampler
   license: BSD-3-Clause
