update base branch name

--- a/environment-files/genome-sampler-qiime2-tiny-2024.10.yml
+++ b/environment-files/genome-sampler-qiime2-tiny-2024.10.yml
@@ -8,4 +8,4 @@ dependencies:
   - vsearch
   - pip
   - pip:
-    - genome-sampler@git+https://github.com/caporaso-lab/genome-sampler.git@master
+    - genome-sampler@git+https://github.com/caporaso-lab/genome-sampler.git@dev
