--- a/environment-files/readthedocs.yml
+++ b/environment-files/readthedocs.yml
@@ -6,6 +6,7 @@ dependencies:
   - qiime2-tiny
   - pyvcf
   - vsearch
+  - nodejs
   - pip
   - pip:
     - genome-sampler@git+https://github.com/caporaso-lab/genome-sampler.git@dev
