add formal usage examples to docs, some other docs reorg

--- a/docs/myst.yml
+++ b/docs/myst.yml
@@ -22,6 +22,7 @@ project:
     - file: intro.md
     - file: install.md
     - file: tutorial.md
+    - file: tutorial-snakemake.md
     - file: downstream-workflows.md
     - file: other.md
     - title: Plugin Reference
