--- a/environment-files/readthedocs.yml
+++ b/environment-files/readthedocs.yml
@@ -1,9 +1,16 @@
 channels:
-- https://packages.qiime2.org/qiime2/2024.10/tiny/released
+- https://packages.qiime2.org/qiime2/2024.10/amplicon/released
 - conda-forge
 - bioconda
 dependencies:
-  - qiime2-tiny
+  - qiime2
+  - q2cli
+  - q2-types
+  - q2-metadata
+  - q2-feature-table
+  - q2-alignment
+  - q2-phylogeny
+  - q2templates
   - pyvcf
   - vsearch
   - nodejs
