--- a/environment-files/genome-sampler-qiime2-amplicon-2024.10.yml
+++ b/environment-files/genome-sampler-qiime2-amplicon-2024.10.yml
@@ -1,5 +1,5 @@
 channels:
-- https://packages.qiime2.org/qiime2/2025.4/amplicon/passed
+- https://packages.qiime2.org/qiime2/2024.10/amplicon/released
 - conda-forge
 - bioconda
 dependencies:
@@ -14,3 +14,5 @@ dependencies:
   - pyvcf
   - vsearch
   - pip
+  - pip:
+    - genome-sampler@git+https://github.com/caporaso-lab/genome-sampler.git@2025.02.0
