--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.versioningit.vcs]
 method = "git-archive"
-describe-subst = "$Format:%(describe)$"
+describe-subst = "$Format:%(describe:tags)$"
 default-tag = "0.0.1"
 
 [tool.versioningit.next-version]
